# RatChat

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  message.rs
server/: Cargo.toml
server/src/: chat.rs  client.rs  main.rs
